# enjima-stream-processing

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bench.yaml.sample  check_cpu_bound_mem_bound.sh  import_enjima.sh  main.cpp  run_benchmark.sh  watchdog.sh
analysis-scripts/: analytics_common.py  config.json  config_bsize_sensitivity.json  config_csize_sensitivity.json  config_latency_vs_tput.json  config_lrb_scaling.json  config_lrb_single.json  config_lrb_single_extended.json  config_nyt_scaling.json  config_nyt_single.json  config_resource_utilization.json  config_sched_period_sensitivity.json  config_timeseries_metrics.json  config_ysb_scaling.json  config_ysb_single.json  enjima_additional_analysis.py  enjima_graphs.py  experiment_selection.json  labels.json
conf/: enjima-config.yaml.sample
enjima/benchmarks/workload/: LRBValidateBenchmark.cpp  LRBValidateBenchmark.h  LinearRoadBenchmark.h  LinearRoadBenchmark.tpp  NewYorkTaxiBenchmark.h  NewYorkTaxiBenchmark.tpp  NewYorkTaxiDQBenchmark.h  NewYorkTaxiDQBenchmark.tpp  NewYorkTaxiOptimizedDQBenchmark.h  NewYorkTaxiOptimizedDQBenchmark.tpp  StreamingBenchmark.cpp  StreamingBenchmark.h  WorkloadException.h  YSBSourceBenchmark.h  YSBSourceBenchmark.tpp  YahooStreamingBenchmark.h  YahooStreamingBenchmark.tpp
enjima/benchmarks/workload/functions/: LRBFunctions.h  LRBUtilities.h  LRBVBFunctions.h  NYTDQFunctions.h  NYTFunctions.h  NYTUtilities.h  YSBFunctions.h
enjima/benchmarks/workload/operators/: InMemoryFixedRateLRBSourceOperator.h  (+14 more)
include/enjima/api/: AggregateFunction.h  CoGroupFunction.h  JoinFunction.h  JoinPredicate.h  KeyExtractionFunction.h  KeyedAggregateFunction.h  KeyedOrNonKeyedAggregateFunction.h  MapFunction.h  MergeableKeyedAggregateFunction.h  NonKeyedAggregateFunction.h  SinkFunction.h  StaticJoinPredicate.h
include/enjima/common/: TypeAliases.h
include/enjima/core/: CoreInternals.fwd.h  CoreTypeAliases.h  InstanceID.h  InstanceID.tpp  OutputCollector.h  OutputCollector.tpp  Record.h  Record.tpp
include/enjima/memory/: MemoryAllocationCoordinator.h  MemoryAllocator.h  MemoryBlock.h  MemoryBlock.tpp  MemoryChunk.h  MemoryInternals.fwd.h  MemoryManager.fwd.h  MemoryManager.h  MemoryManager.tpp  MemoryTypeAliases.h  MemoryUtil.h
include/enjima/metrics/: MetricNames.h  MetricSuffixes.h  MetricsInternals.fwd.h  PeriodicMetricsLogger.h  Profiler.h  SystemMetricsProfiler.h
include/enjima/operators/: DoubleInputOperator.h  DoubleInputOperator.tpp  FilterOperator.h  FilterOperator.tpp  FixedEventTimeWindowCoGroupOperator.h  FixedEventTimeWindowCoGroupOperator.tpp  FixedEventTimeWindowJoinOperator.h  FixedEventTimeWindowJoinOperator.tpp  FixedEventTimeWindowOperator.h  FixedEventTimeWindowOperator.tpp  GenericSinkOperator.h  GenericSinkOperator.tpp  LatencyTrackingSourceOperator.h  LatencyTrackingSourceOperator.tpp  MapDoubleOutOperator.tpp  MapOperator.h  MapOperator.tpp  MapSingleOutOperator.tpp  NoOpSinkOperator.h  NoOpSinkOperator.tpp  OperatorUtil.h  OperatorsInternals.fwd.h  OperatorsTypeAliases.h  SingleInputDoubleOutOperator.tpp  SingleInputOperator.h  SingleInputOperator.tpp  SingleInputSingleOutOperator.tpp  SinkOperator.h  SinkOperator.tpp  SlidingEventTimeWindowOperator.h  SlidingEventTimeWindowOperator.tpp  SourceOperator.h  SourceOperator.tpp  StaticEquiJoinDoubleOutOperator.tpp  StaticEquiJoinOperator.h  StaticEquiJoinOperator.tpp  StaticJoinOperator.h  StaticJoinOperator.tpp  StreamingOperator.h
include/enjima/queueing/: RecordQueueBase.h  RecordQueueImpl.h  RecordQueueImpl.tpp  VyukovUnboundedSPSCQueue.h
include/enjima/runtime/: CancellationException.h  ExecutionEngine.fwd.h  ExecutionEngine.h  IllegalArgumentException.h  RuntimeInternals.fwd.h  RuntimeTypes.h  RuntimeUtil.h  RuntimeUtil.tpp  StreamingJob.h  StreamingTask.h
preprocessing-scripts/: merge.py
(+29 files in other folders)
